--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,14 @@
 
 @layer base {
   @font-face {
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    src: url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+      U+2215, U+FEFF, U+FFFD;
+  }
+  @font-face {
     font-family: 'Inter', sans-serif;
     font-style: normal;
     src: url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
@@ -43,7 +51,7 @@
   }
 
   /* #region  /**=========== Typography =========== */
-  .h0 {
+  p .h0 {
     @apply font-primary text-3xl font-bold md:text-5xl;
   }
 
@@ -68,6 +76,7 @@
   }
 
   body,
+  p,
   .p {
     @apply font-primary text-sm md:text-base;
   }
@@ -85,7 +94,7 @@
 
   /* Class to adjust with sticky footer */
   .min-h-main {
-    @apply min-h-[calc(100vh-56px)];
+    @apply min-h-[calc(100vh-390px)];
   }
 }
 
